[gd_scene load_steps=18 format=2]

[ext_resource path="res://Montserrat/static/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=2]
[ext_resource path="res://Assets/Add.png" type="Texture" id=3]
[ext_resource path="res://ToDoWithList.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.564706, 0.933333, 0.568627, 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.572549, 0.87451, 0.952941, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.564706, 0.933333, 0.568627, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.733333, 0.933333, 0.756863, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.564706, 0.933333, 0.568627, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.733333, 0.933333, 0.756863, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.564706, 0.933333, 0.568627, 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.733333, 0.933333, 0.756863, 1 )

[node name="ToDoWithList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 750 )

[node name="VCont" type="VBoxContainer" parent="Panel"]
margin_right = 400.0
margin_bottom = 748.0
rect_min_size = Vector2( 400, 600 )

[node name="BackCont" type="HBoxContainer" parent="Panel/VCont"]
margin_right = 400.0
margin_bottom = 80.0
rect_min_size = Vector2( 400, 80 )

[node name="Panel" type="Panel" parent="Panel/VCont/BackCont"]
margin_right = 400.0
margin_bottom = 80.0
rect_min_size = Vector2( 400, 80 )
custom_styles/panel = SubResource( 6 )

[node name="BackButton" type="TouchScreenButton" parent="Panel/VCont/BackCont/Panel"]
position = Vector2( 86, 81 )
rotation = 3.14159
normal = ExtResource( 2 )

[node name="Label" type="Label" parent="Panel/VCont/BackCont/Panel"]
margin_left = 155.0
margin_top = 20.0
margin_right = 255.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 40 )
rect_scale = Vector2( 1.2, 1.2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "To Do List"
align = 1
valign = 1

[node name="HCont" type="HBoxContainer" parent="Panel/VCont"]
margin_top = 84.0
margin_right = 400.0
margin_bottom = 164.0
rect_min_size = Vector2( 400, 80 )

[node name="LineEdit" type="LineEdit" parent="Panel/VCont/HCont"]
margin_right = 310.0
margin_bottom = 80.0
rect_min_size = Vector2( 310, 80 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 10 )

[node name="Button" type="TextureButton" parent="Panel/VCont/HCont"]
modulate = Color( 0.564706, 0.933333, 0.568627, 1 )
self_modulate = Color( 0.564706, 0.933333, 0.568627, 1 )
margin_left = 314.0
margin_right = 394.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 3 )

[node name="ToDoLabel" type="Panel" parent="Panel/VCont"]
margin_top = 168.0
margin_right = 400.0
margin_bottom = 208.0
rect_min_size = Vector2( 400, 40 )
custom_styles/panel = SubResource( 7 )

[node name="Label" type="Label" parent="Panel/VCont/ToDoLabel"]
margin_left = 175.0
margin_top = 19.0
margin_right = 215.0
margin_bottom = 33.0
rect_scale = Vector2( 1.3, 1.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "To Do"

[node name="ToDo" type="ItemList" parent="Panel/VCont"]
margin_top = 212.0
margin_right = 400.0
margin_bottom = 372.0
rect_min_size = Vector2( 400, 160 )
custom_colors/guide_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/bg = SubResource( 11 )

[node name="DoingLabel" type="Panel" parent="Panel/VCont"]
margin_top = 376.0
margin_right = 400.0
margin_bottom = 396.0
rect_min_size = Vector2( 400, 20 )
custom_styles/panel = SubResource( 8 )

[node name="Label2" type="Label" parent="Panel/VCont/DoingLabel"]
margin_left = 175.0
margin_right = 215.0
margin_bottom = 14.0
rect_scale = Vector2( 1.3, 1.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Doing"

[node name="Doing" type="ItemList" parent="Panel/VCont"]
margin_top = 400.0
margin_right = 400.0
margin_bottom = 560.0
rect_min_size = Vector2( 400, 160 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/bg = SubResource( 12 )

[node name="DoneLabel" type="Panel" parent="Panel/VCont"]
margin_top = 564.0
margin_right = 400.0
margin_bottom = 584.0
rect_min_size = Vector2( 400, 20 )
custom_styles/panel = SubResource( 9 )

[node name="Label3" type="Label" parent="Panel/VCont/DoneLabel"]
margin_left = 175.0
margin_top = 4.0
margin_right = 215.0
margin_bottom = 18.0
rect_scale = Vector2( 1.3, 1.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Done"

[node name="Done" type="ItemList" parent="Panel/VCont"]
margin_top = 588.0
margin_right = 400.0
margin_bottom = 748.0
rect_min_size = Vector2( 400, 160 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/bg = SubResource( 13 )

[node name="ToDoDown" type="TextureButton" parent="."]
margin_left = 394.0
margin_top = 259.0
margin_right = 474.0
margin_bottom = 339.0
rect_rotation = 90.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 2 )

[node name="DoingUp" type="TextureButton" parent="."]
margin_left = 330.0
margin_top = 478.0
margin_right = 410.0
margin_bottom = 558.0
rect_rotation = 270.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 2 )
flip_v = true

[node name="DoingDown" type="TextureButton" parent="."]
margin_left = 394.0
margin_top = 483.0
margin_right = 474.0
margin_bottom = 563.0
rect_rotation = 90.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 2 )

[node name="DoneUp" type="TextureButton" parent="."]
margin_left = 330.0
margin_top = 700.0
margin_right = 410.0
margin_bottom = 780.0
rect_rotation = -90.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="Panel/VCont/BackCont/Panel/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="text_changed" from="Panel/VCont/HCont/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="Panel/VCont/HCont/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Panel/VCont/HCont/Button" to="." method="_on_Button_pressed"]
[connection signal="item_activated" from="Panel/VCont/ToDo" to="." method="_on_ToDo_item_activated"]
[connection signal="item_selected" from="Panel/VCont/ToDo" to="." method="_on_ToDo_item_selected"]
[connection signal="nothing_selected" from="Panel/VCont/ToDo" to="." method="_on_ToDo_nothing_selected"]
[connection signal="item_selected" from="Panel/VCont/Doing" to="." method="_on_Doing_item_selected"]
[connection signal="item_selected" from="Panel/VCont/Done" to="." method="_on_Done_item_selected"]
[connection signal="pressed" from="ToDoDown" to="." method="_on_ToDoDown_pressed"]
[connection signal="pressed" from="DoingUp" to="." method="_on_DoingUp_pressed"]
[connection signal="pressed" from="DoingDown" to="." method="_on_DoingDown_pressed"]
[connection signal="pressed" from="DoneUp" to="." method="_on_DoneUp_pressed"]
